Add CSS calendar event hover
Calendar events now expand to 100% width, and move up a z layer
when they are hovered over. They also left align within the column
again.

--- a/front/style.css
+++ b/front/style.css
@@ -86,6 +86,14 @@ body {
 	border-width: 2px;
 }
 
+.event:hover {
+    width: 100% !important;
+    left: 0 !important;
+    z-index: 1 !important;
+    /* TODO keep actual color, just remove transparency */
+    background-color: blue !important;
+}
+
 #clock-0  { top: calc(100%/24 *  0); }
 #clock-2  { top: calc(100%/24 *  2); }
 #clock-4  { top: calc(100%/24 *  4); }
