Made graphical hour sepparator much longer.
This is not a good solution to the problem. But it works for now and I'm
to lazy to actually fix it.

--- a/front/style.css
+++ b/front/style.css
@@ -60,7 +60,7 @@ body {
 .clock {
 	color: gray;
 	border-top: 1px dotted gray;
-	width: calc(100% + 5ex);
+	width: 100000; /* calc(100% + 5ex); */
 }
 
 .days > :first-child {
